--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -6,23 +6,20 @@
                 <meta name="viewport"
                         content="width=device-width, initial-scale=1.0">
                 <link rel="stylesheet" href="../output.css">
-                <style>
-                        .dropdown-btn:hover~ul {
-                                display: block;
-                        }
-                </style>
+
         </head>
 
         <body>
                 <header
                         class="w-full bg-slate-700 shadow-lg sticky top-0 left-0">
                         <nav class="w-full mx-auto">
+
                                 <!-- nav-header -->
                                 <div
                                         class="nav-header flex items-center py-4 px-4 justify-between bg-slate-700 text-white">
                                         <h3
                                                 class="text-2xl capitalize">Anjuman-e-Imadi</h3>
-                                        <button class="toggle text-white"
+                                        <button class="toggle-btn text-white"
                                                 id="toggler"><svg
                                                         xmlns="http://www.w3.org/2000/svg"
                                                         x="0px" y="0px"
