--- a/src/output.css
+++ b/src/output.css
@@ -2141,26 +2141,6 @@ html {
   border-bottom-left-radius: 0.5rem;
 }
 
-.bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-}
-
-.bg-slate-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#02393e\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 57 62 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#02393E\] {
   --tw-bg-opacity: 1;
   background-color: rgb(2 57 62 / var(--tw-bg-opacity));
@@ -2169,6 +2149,11 @@ html {
 .bg-\[\#164F55\] {
   --tw-bg-opacity: 1;
   background-color: rgb(22 79 85 / var(--tw-bg-opacity));
+}
+
+.bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
 .fill-slate-400 {
@@ -2270,19 +2255,24 @@ html {
   display: block;
 }
 
-.hover\:bg-slate-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+.btn-theme-primary {
+  background-color: #02393e;
+  color: #d2d2d2;
 }
 
-.hover\:bg-slate-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+.btn-theme-primary:hover {
+  background-color: #164f55;
+  color: #d2d2d2;
 }
 
 .hover\:bg-\[\#02393E\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(2 57 62 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-slate-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 
 @media (min-width: 768px) {
